--- a/style.css
+++ b/style.css
@@ -67,6 +67,14 @@ canvas {
     margin-bottom: var(--spacing);
   }
 
+section_trans {
+    grid-column: 2 / 8;
+    padding: 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    margin-bottom: var(--spacing);
+  }
+
   blockquote {
     margin: 0;
     padding: 0;
